fix issue with images having a clipped bottom frame

--- a/MaterialDesign/MaterialDesign.theme.css
+++ b/MaterialDesign/MaterialDesign.theme.css
@@ -194,3 +194,8 @@
 .container__871ba.checked__6bdb0 {
     background-color: rgb(17 181 86) !important;
 }
+
+/* fix images not being tall enough */
+.oneByOneGrid__02495 {
+    max-height: fit-content;
+}
